src/components/ui/navbar/Navbar.module.css
.header {
	height: 150px;
	display: flex;
	justify-content: center;
	/* border-bottom: 1px solid black; */
	background: url("/src/assets/images/bg.svg");
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	position: relative;
	z-index: 1000;
}

.navbar {
	width: 80%;
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.logo img {
	width: 80px;
	height: auto;
}

.navMenuList {
	display: flex;
	gap: 4rem;
}

.navMenuList li a {
	position: relative;
	font-family: var(--ff-satoshi);
	color: var(--heading-primary);
	font-weight: var(--fw-medium);
	font-size: 1.125rem;
	padding-block: 0.75rem;
}

.navMenuList a::before {
	content: "";
	position: absolute;
	display: block;
	width: 100%;
	height: 1px;
	bottom: 3px;
	left: 0;
	background-color: var(--heading-primary);
	transform: scaleX(0);
	transition: transform 0.3s ease;
}

.navMenuList a:hover::before {
	transform: scaleX(1);
}

.navMobileMenuList {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	gap: 1rem;
	padding: 2rem;
	background-color: var(--bg-secondary);
	border-radius: 24px;
	position: absolute;
	top: 8rem;
	left: 1rem;
	right: 1rem;
	width: calc(100% - 2rem);
	z-index: 100;
	animation: fadeIn 0.3s ease-in-out;
}

.navMobileMenuList li a {
	width: 100%;
}

@keyframes fadeIn {
	from {
		opacity: 0;
		transform: translateY(-10px);
	}
	to {
		opacity: 1;
		transform: translateY(0);
	}
}

.navMobileMenuList li {
	width: 100%;
	text-align: center;
	padding: 1rem;
	border-radius: 2rem;
	background-color: var(--text-secondary);
	color: var(--heading-primary);
	font-family: var(--ff-satoshi);
	text-transform: uppercase;
	transition: all 0.2s ease-out;
}

.navMobileMenuList li:hover {
	cursor: pointer;
	transform: translateY(-4px);
}

.mobileMenu {
	display: none;
}

.mobileMenu img {
	width: 30px;
}

/* Media Queries */
@media screen and (max-width: 768px) {
	.navMenuList {
		display: none;
	}

	.mobileMenu {
		display: block;
	}
}

